--- a/projects/airbnb-housing-impact.html
+++ b/projects/airbnb-housing-impact.html
@@ -62,7 +62,7 @@ print(model.summary())
                         </code></pre>
 
                         <p>
-                            <a href="syifbhuiyan/nyc-airbnb-impact" class="button primary">View Full Code on GitHub</a>
+                            <a href="https://github.com/syifbhuiyan/nyc-airbnb-impact" class="button primary">View Full Code on GitHub</a>
                         </p>
 
                     </section>
